CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(coin-proj)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS ON)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_EXTENSIONS ON)

set(COIN_ENABLE_TEST ON)

# active header-only of {fmt} lib
ADD_DEFINITIONS(-DFMT_HEADER_ONLY)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/3rd-parts/fmt)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/src/coin-data
    ${CMAKE_CURRENT_SOURCE_DIR}/3rd-parts/fmt/include
)

ADD_SUBDIRECTORY(src)
ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
