CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(coin-commons VERSION 1.0.0)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/type              SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/type/impl/anydata SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/node              SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/system            SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/terminal          SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/executor          SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/utils             SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ipcs              SRCS)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    pthread
    util
    fmt::fmt
)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)

INSTALL(TARGETS coin-commons
    EXPORT CoinTargets
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
    INCLUDES DESTINATION include
)
