CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(coin-commons-test)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/executor EXECUTOR_SRCS)

ADD_EXECUTABLE(executor-test ${EXECUTOR_SRCS})
TARGET_LINK_LIBRARIES(executor-test
    coin-commons
)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/dummy DUMMY_SRCS)
ADD_EXECUTABLE(dummy-test ${DUMMY_SRCS})
TARGET_LINK_LIBRARIES(dummy-test
    coin-commons
)
